# lxmixer

./: .gitignore  CMakeLists.txt  README.md  lxmixer.cpp  lxmixer.h  lxmixer.kdev4  lxmixer.ui  main.cpp
.kdev4/: lxmixer.kdev4
cmake/: LXQtTranslateDesktop.cmake
resources/: lxmixer.desktop.in
src/: CMakeLists.txt  main.cpp  mainwindow.ui
translations/: lxmixer_fr.desktop  lxmixer_ja.desktop  lxmixer_ru.desktop
